2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-window-properties.c: (main): Remove unused code.

2005-01-02  Sebastien Bacher  <seb128@debian.org>

	* gnome-window-properties.glade: 
	patch from Heikki Paajanen <hepaajan@iki.fi> (based on the patch
	from Andrew Johnson <acjgenius@earthlink.net>) 
	to not set "close" as the default button (Closes: #98202).

2004-12-15  Sebastien Bacher  <seb128@debian.org>

	* window-properties.desktop.in.in: changed the tooltip to respect 
	the HIG.

2004-11-09  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: install .desktop file in $(datadir)/applications
	
	* window-properties.desktop.in: add OnlyShowIn=GNOME;

2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1

2004-08-20  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* gnome-window-properties.c: (main):
	Use themed icon for window hint.

2004-07-06  Padraig O'Briain <padraig.obriain@sun.com>

	* gnome-window-properties.glade:  Add mnemnoic widget for
	"Interval before raising" and add some label-for/labelled-by
	relations. Fixes bug #144586.

Mon Jun 21 15:52:57 2004  Jonathan Blandford  <jrb@gnome.org>

	* gnome-window-properties.c (set_alt_click_value): Set the radio
	group to be inconsistent if no matching modifier is found.

	* gnome-window-properties.c (reload_settings): Check for NULL,
	141453

2004-06-07  Kaushal Kumar  <kaushal.kumar@wipro.com>

	* gnome-window-properties.c (response_cb): Associate the help
	button response with the appropriate callback.
	Fixes bug #141391.

2004-05-30  Ole Laursen  <olau@hardworking.dk>

	* gnome-window-properties.glade: Revamped the internal design and
	inserted headings to make the layout cleaner.

2004-04-15  Jody Goldberg <jody@gnome.org>

	* Release 2.6.1

2004-04-01  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.3

2004-03-30  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.1

2004-03-23  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0

2004-03-11  Jody Goldberg <jody@gnome.org>

	* Release 2.5.4
