@@ -1,3 +1,9 @@
+2006-01-03  Rajan Singh  <singh.rajan@wipro.com>
+
+	* gnome-window-properties.c: (fill_radio) (reload_mouse_modifiers) : 
+	Added mnemonics.
+	* gnome-window-properties.glade : Removed the mnemonic.
+
 2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* gnome-window-properties.c: (main): Remove unused code.
